--- a/content/06.domain.md
+++ b/content/06.domain.md
@@ -199,7 +199,30 @@ If we take the number of inhibitory hippocampal neuron types to be about 35, the
 
 ### Comments
 
+## A recipe book for cell types in the human brain
+  [@url:https://www.nature.com/articles/d41586-019-02343-8]
+    
+### Highlights
+
+Hodge et al.1 report their analysis of gene expression in single cells from the brain to present a ‘cookbook’ of molecular recipes for the neuronal cell types in the human cerebral cortex
+ annotating brain cells under a common taxonomy represents an enormous challenge
+bioinformatic analyses to identify molecular signatures of the major cell classes
+
+Many of those clusters represent previously defined cell types, but others revealed previously unknown distinctions within broad neuronal classes.
+
+Each cell type was given a four-part name on the basis of its general function (excitatory, inhibitory or non-neuronal), its anatomical position, and its expression of genes characteristic of major classes and of specific cell types
+
+ A clustering analysis to identify matching cell types. Using this method, the authors determined that almost all of the 75 cell types identified in the human cortex showed correspondence (homology) with cell types described in the mouse.
+
+a clustering analysis to identify matching cell types. Using this method, the authors determined that almost all of the 75 cell types identified in the human cortex showed correspondence (homology) with cell types described in the mouse
+
+### Comments
+News and views of "Conserved cell types with divergent features in human versus mouse cortex"
+
+https://www.nature.com/articles/s41586-019-1506-7
+
 ## Title
+
     \cite{citation
     
 ### Highlights
