--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -368,7 +368,6 @@ Metastable states Cell-level analysis of trajectories investigates cellular dens
 
 ### Comments
 
-# Template 
 
 ## Revealing the vectors of cellular identity with single-cell genomics
 [@doi:10.1038/nbt.3711]
@@ -599,7 +598,6 @@ The top marker genes were used to assign cell-type annotations manually for each
 
 
 
-# Template 
 
 ## Cell types in the mouse cortex and hippocampus revealed by single-cell RNA-seq
 [@doi:10.1126/science.aaa1934]
@@ -635,6 +633,21 @@ the maintenance of adult differentiated cell types.
 
 ### Comments
 
+
+# Template 
+
+## Highly Parallel Genome-wide Expression Profiling of Individual Cells Using Nanoliter Droplets
+[@doi:10.1016/j.cell.2015.05.002]
+### Highlights
+
+We analyzed transcriptomes from 44,808 mouse retinal cells and identified 39 transcription- ally distinct cell populations, creating a molec- ular atlas of gene expression for known retinal cell classes
+our knowledge of cellular diversity is incomplete; for example, the cell-type complexity of the brain is unknown and widely debated
+
+Wethen applied it to a com- plex neural tissue, mouse retina, and from 44,808 cell profiles identified 39 distinct populations, each corresponding to one or a group of closely related cell types.
+
+
+
+### Comments
 
 # Template 
 
