text: Add notes on news and views of Tasic and Economo

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,3 +1,5 @@
+Neuron Names: A Gene- and Property-Based Name Format, With Special Reference to Cortical Neurons
+
 Tasic, B. et al. Adult mouse cortical cell taxonomy revealed by single cell transcrip- tomics. Nat. Neurosci. 19, 335–346 (2016)
 Habib, N. et al. Div-Seq: Single-nucleus RNA-Seq reveals dynamics of rare adult newborn neurons. Science 353, 925–928 (2016).
 Shekhar, K. et al. Comprehensive classification of retinal bipolar neurons by single-cell transcriptomics. Cell 166, 1308–1323 (2016).
