--- a/content/06.domain.md
+++ b/content/06.domain.md
@@ -221,9 +221,33 @@ News and views of "Conserved cell types with divergent features in human versus 
 
 https://www.nature.com/articles/s41586-019-1506-7
 
-## Title
+## Single-cell sequencing paints diverse pictures of the brain
+[@url:https://www.nature.com/articles/d41586-018-07027-3]
+    
+### Highlights
+Spanish neuroscientist Santiago Ramón y Cajal created a ‘portrait gallery’ of neurons by carefully examining slices of brain tissue to produce detailed drawings of the cells that captured their diverse shapes. Since then, neurons have been further characterized using measurements of shape, physiology or function. Now, technologies to analyse the gene-expression profile of single cells enable unbiased exploration of cell types.
 
-    \cite{citation
+The authors identified 133 cell types on the basis of gene-expression profiles.
+
+20,000 cells, mostly neurons, from two anatomically distinct cortical areas in adult mice — the visual cortex, which processes visual sensory information from the eye, and the anterior lateral motor cortex, which is involved in movement.
+
+The authors identified more than 100 different cell types, including 61 types of inhibitory neuron and 56 types of excitatory neuron. They found that most cell types were present in both cortical areas — with the exception of excitatory neurons
+
+neurons with different gene-expression profiles also showed different patterns of long-range projection
+
+functional specialization of cortical areas might rely not only on differences in microcircuits and connectivity patterns, but also on the use of different cell types to process information
+
+Economo et al.2 zoom in to look at nuanced differences between neurons in one layer of the cortex.
+
+Economo et al. engineered each subpopulation of neurons to express the protein channelrhodopsin — a light-sensitive ion channel. This enables neuronal activity to be precisely controlled using light (a method known as optogenetics), and so allowed the authors to dissect the roles of the upper and the lower layer-5 neurons in different types of motor function.
+
+
+### Comments
+
+
+## Title
+[@url:]
+    
     
 ### Highlights
 
