text: Add notes about CellO classification

--- a/content/06.domain.md
+++ b/content/06.domain.md
@@ -241,7 +241,9 @@ Economo et al.2 zoom in to look at nuanced differences between neurons in one la
 
 Economo et al. engineered each subpopulation of neurons to express the protein channelrhodopsin — a light-sensitive ion channel. This enables neuronal activity to be precisely controlled using light (a method known as optogenetics), and so allowed the authors to dissect the roles of the upper and the lower layer-5 neurons in different types of motor function.
 
+ these markers could be used to design more optogenetic experiments that target specific neuronal populations; to investigate whether ‘area-specific’ cell types can be found in other cortical regions;
 
+ 
 ### Comments
 
 
