--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -432,6 +432,50 @@ By combining single- cell tissue genomics with computational models for circuits
 "This will reopen definitions of a cell’s type and will allow a more sophisticated view of a cell, not only as an instance of a predefined type, but rather as the sum of the biological factors that shaped it."
 --> Amazing!
 
+# Template 
+
+## CellO: Comprehensive and hierarchical cell type classification of human cells with the Cell Ontology
+[@doi:10.1101/634097]
+### Highlights
+
+CellO, a tool for hierarchically classifying cell type from single-cell RNA-seq data against the graph-structured Cell Ontology.
+CellO Viewer, for exploring cell type-specific signatures across the Cell Ontology
+
+Second, many existing methods use flat-classification. Flat classification suffers from the possibility that predictions are logically inconsistent with the hierarchy of cell types. Specifically, for a given query, a flat classifier may output a probability for a cell type that is larger than the classifier's output for its parent cell type in the hierarchy.
+
+Garnett (Pliner et al., 2019 ) utilizes a hierarchy of cell types; however, these hierarchies must be pre-specified by the user. Furthermore, Garnett requires that each cell within the hierarchy be associated with a set of marker genes. To the best of our knowledge, the only method that utilizes the graph-structure of an ontology for the task at hand is URSA (Lee et al., 2013) , which classifies gene expression profiles against the BRENDA Tissue Ontology (Gremse et al., 2011) .
+
+We thus avoid the circularity in using ground truth cell type labels determined by gene expression (via the expression of cell type-specific marker genes) as are often provided in scRNA-seq datasets.
+
+We therefore curated a novel dataset from the SRA consisting of healthy, untreated, primary cells. To do so efficiently, we leveraged the annotations provided by the MetaSRA project (Bernstein et al., 2017) which includes sample-specific information including cell type, disease-state, and sample type.
+
+The hierarchical classification task is inherently a multi-label classification task where each input sample (i.e. cell) is mapped to a set of output labels (i.e. cell types). Hierarchical classification extends multi-label classification by further requiring that the output labels are consistent with the labels’ DAG.
+
+we first cluster single-cell data using the Leiden community-detection algorithm (Traag et al., 2019) using the default resolution parameter of 1.0, as implemented in the Scanpy Python package (Wolf et al., 2018) , and then compute each cluster’s mean expression profile. The mean expression profiles are less sparse than those of the individual cells and thus better resemble the bulk RNA-seq data on which the algorithms were trained. CellO first classifies each cluster based on its mean expression profile and then assigns each cell to its cluster’s assigned cell types.
+
+--> Argh, that is logically ugly (even if it works)
+
+Algorithm (Traag et al., 2019) using the default resolution parameter of 1.0, as implemented in the Scanpy Python package (Wolf et al., 2018) , and then compute each cluster’s mean expression profile. The mean expression profiles are less sparse than those of the individual cells and thus better resemble the bulk RNA-seq data on which the algorithms were trained. CellO first classifies each cluster based on its mean expression profile and then assigns each cell to its cluster’s assigned cell types.
+
+For each cell, we evaluate a set of binary yes-no decisions for each cell type that result from thresholding the raw output probabilities and enforce each cell to be annotated with only one most-specific cell type.
+
+To enable a comparison between scMatch, SingleR, and CellO, we project the outputs of scMatch and SingleR onto the Cell Ontology in order to evaluate scMatch and SingleR within the hierarchical classification framework. Specifically, for a given cell annotated by one of these methods with some cell type , we also annotate the cell with all ancestors of according to the Cell Ontology.
+
+Although the bulk RNA-seq training data contains samples of both embryonic cells and cells of various neural cell types, it does not contain any sample labeled as both neural cell and embryonic cell. Despite this discrepancy, CellO was able to annotate these cells with reasonable cell type labels ( Figure 5B, S2C ). We note that the microglial cells were annotated as phagocytes, which are an ancestral term to microglial cells in the Cell Ontology. Similarly, CellO annotated the glial cells as neuron associated cells. These examples again highlight CellO’s ability to annotate cells with a term higher in the ontology DAG when it is unsure about a cell’s more-specific cell type.
+
+We provide a Python package for running CellO, using either IR or CLR, on a user-provided gene expression matrix ( https://github.com/deweylab/CellO ).
+
+To enable their interpretation, we present a web-based tool, the CellO Viewer, for exploring these discriminative genes uncovered by the models
+( https://uwgraphics.github.io/CellOViewer/ ).
+
+We found that across diverse cell types, many known cell type-specific marker genes were recovered by the CellO models and are presented by the CellO Viewer. For example, CD3D, CD3E, and CD3G, which are canonical markers for T cells, were all present within the top ten genes ranked according to the magnitude of their coefficients within the logistic binary regression model used for distinguishing T cells from all other cell types.
+
+Finally, we expect the performance of hierarchical classifiers to improve as both more data is collected and as the Cell Ontology is expanded. Most importantly, we expect the calibration of the classifiers to improve as more training data becomes available for each cell type. More data will be collected both as data is continually added to the SRA and as improvements are made to the SRA's metadata thereby allowing retrieval of previously undiscovered primary cell samples
+
+### Comments
+flat-classification
+--> I like this comment
+
 # Experimental single-cell research 
 
 ## Single-cell RNA-seq reveals new types ofhuman blood dendritic cells, monocytes, and progenitors
@@ -634,7 +678,6 @@ the maintenance of adult differentiated cell types.
 ### Comments
 
 
-# Template 
 
 ## Highly Parallel Genome-wide Expression Profiling of Individual Cells Using Nanoliter Droplets
 [@doi:10.1016/j.cell.2015.05.002]
