--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,10 +1,13 @@
-Neuron Names: A Gene- and Property-Based Name Format, With Special Reference to Cortical Neurons
+Natural killer cell immunotypes related to COVID-19 disease severity
+
+The human body at cellular resolution: the NIH Human Biomolecular Atlas Program
 
 Tasic, B. et al. Adult mouse cortical cell taxonomy revealed by single cell transcrip- tomics. Nat. Neurosci. 19, 335–346 (2016)
 Habib, N. et al. Div-Seq: Single-nucleus RNA-Seq reveals dynamics of rare adult newborn neurons. Science 353, 925–928 (2016).
 Shekhar, K. et al. Comprehensive classification of retinal bipolar neurons by single-cell transcriptomics. Cell 166, 1308–1323 (2016).
 Korem, Y. et al. Geometry of the gene expression space of individual cells. PLOS Comput. Biol. 11, e1004224 (2015).
 
+ A semi-supervised approach for cell phenotypic and functional estimation in tissue microenvironmen
 
 Petilla Interneuron Nomenclature Group, Ascoli, G.A., Alonso-Nanclares, L., Anderson, S.A., Barrionuevo, G., Benavides-Piccione, R., Burkhalter, A., Buz- sa´ ki, G., Cauli, B., Defelipe, J., Faire´ n, A., et al. (2008). Petilla terminology: nomenclature of features of GABAergic interneurons of the cerebral cortex. Nat. Rev. Neurosci. 9, 557–568.
 
