--- a/content/06.domain.md
+++ b/content/06.domain.md
@@ -1,3 +1,5 @@
+# Immune
+
 ## Heterogeneity of neutrophils
     [@doi:10.1038/s41577-019-0141-8]
     
@@ -52,6 +54,8 @@ marginal zoneneutrophils in the human spleen adopt unique B cell-stimulating pro
 ### Comments
 
 References fluctuate between human, mouse or general "neutrophils".
+
+# Neuro
 
 ## Neuronal cell types
 
@@ -247,10 +251,74 @@ Economo et al. engineered each subpopulation of neurons to express the protein c
 ### Comments
 
 
+
+# Template 
+
+## Neuron Names: A Gene- and Property-Based Name Format, With Special Reference to Cortical Neurons
+[@doi:10.3389/fnana.2019.00025]
+### Highlights
+Clarity will therefore be enhanced by conveying as much as possible the genes and properties in the neuron name.
+
+Most terms for neurons are holdovers from the nineteenth century, when it was discovered that nerve cells appear as distinct types based on the structure and location of their axons, dendrites and cell bodies.
+
+Betz cell.” All attempts to bring order into this daunting terminological jungle originate in the vast overview contained in Ramón y Cajal’s (1911) great work Histologie du système nerveux de l’homme & des vertébrés.
+
+The SenseLab suite of databases, initiated in 1993 and building
+on publications on synaptic organization of local regions, contains NeuronDB, which has focused on the terminology and properties of many of the most highly investigated neurons.
+
+The importance of establishing a common cell type nomenclature across species cannot be overstated .... The nomenclature could follow a hierarchical order, starting at the highest level: the species, then the brain region annotated based on a unified anatomical reference atlas system with cross-correlations among species, and then the cell type as defined by a multimodal feature set (including locational, molecular, morphological, physiological, and ontological features) (ed. italics).... The nomenclature should be a culmination of knowledge gained about the cellular organization of the nervous system.” (Ecker et al., 2017, p. 551)
+
+Any nomenclature format must also take account of the fact that a given property may not always be present. As will be discussed, current research is showing that the properties that define a neuron are dependent on many dynamic factors, reflecting different functional states that can include differences in gene expression.
+
+In general, it may be useful to distinguish three conceptual levels of description: a common term (the label), a definition (a combination of key properties), and additional features (other non-essential properties).
+
+A comprehensive attempt was made by the “Petilla Conference” to list the most common properties used to classify the inhibitory interneurons of the cerebral cortex, all the way to quantitative measurements of cell processes and features (Petilla Interneuron Nomenclature Group [PING] et al., 2008)
+
+This classical unimodal anatomical approach based on structure, however, is not enough in a molecular era.
+
+Each full name technically would begin by indicating the species (and where applicable the strain), gender, and age.
+
+Every neuron name has the flexibility of being augmented (to select subsets) or diminished (selecting supersets) to match the study.
+
+The lumbar ventral horn contains two types of neurons: large cells, motor neurons, which have long axons that innervate the skeletal muscles and muscle spindles, and small cells, which have short axons that stay within the anterior horn (Figure 1).
+
+We will see that morphology and connectivity will vie for priority in defining neurons in many regions; together, they are in fact usually enough to specifically define the cell type.
+
+These many potential types might suggest that we should try to lump as many as possible together to make our database more manageable
+ --> I strongly disagree! Let`s embrace large databases. 
+ However, a better conclusion is that this approach to neuron terminology is revealing one of the essential features of the neocortex: the uniquely large number of different neuron types, each potentially able to process information in ways that differ either slightly or radically in generating enhanced behavior of the animal.
+ --> Now I agree :)
+
+A further problem for the whole idea of specific names for neuron types is the recent study mentioned above ofhippocampal interneurons by Harris et al. (2018), which found continuous variation in classes of properties.
+
+The functional properties of a brain region are state dependent: they vary depending on the behavioral state of the animal.
+
+A nomenclature must regard these added complexities not as problems but as opportunities to reflect the nervous system as it really is.
+
+In conclusion, we summarize the advantages of moving toward a systematic format for neuron names in which traditional names based on structure are extended to include genes and functional properties.
+
+One is by the location of their cell body in one of the different cortical layers, recognizing that a layer may contain different cell types.
+
+Ultimately, a multimodal approach incorporating continuously variable cell types will facilitate an accurate reductionist interpretation of the nervous system.
+
+
+### Comments
+
+# Template 
+
 ## Title
-[@url:]
-    
-    
+[@doi:]
+### Highlights
+
+
+
+### Comments
+
+
+# Template 
+
+## Title
+[@doi:]
 ### Highlights
 
 
