text: Add notes on NK immunotypes

--- a/content/06.domain.md
+++ b/content/06.domain.md
@@ -55,6 +55,47 @@ marginal zoneneutrophils in the human spleen adopt unique B cell-stimulating pro
 
 References fluctuate between human, mouse or general "neutrophils".
 
+## Natural killer cell immunotypes related to COVID-19 disease severity
+[@doi:]
+### Highlights
+Unsupervised high-dimensional analysis of peripheral blood NK cells furthermore identified distinct NK cell immunotypes that were linked to disease severity.
+
+NK cells are innate effector lymphocytes that are typically divided into cytokine-producing CD56bright NK cells and cytotoxic CD56dim NK cells.
+patients with moderate and severe COVID-19 disease were recruited early during their disease, sampled for peripheral blood, and analyzed by 28-color flow cytometry to assess NK cell activation, education, and presence of adaptive NK cells
+
+gating strategy in fig. S1A
+K) HLA-E expression from scRNA-seq data of the indicated cell types.
+
+CMV-seropositive healthy controls and COVID-19 patients dis- playing more than 5% of NKG2C+CD57+ cells within their CD56dim NK cell population were considered to have adaptive NK cell expansions.
+
+Preprocessed scRNA-seq data were obtained from a published dataset (24). CD8 T cells were excluded from down- stream NK cell analyses based on k-means clustering of CD8 and NK cell markers from the human cell atlas PBMC benchmarking dataset (57), followed by renormalization of the data.
+--> What?
+
+24. M. Liao, Y. Liu, J. Yuan, Y. Wen, G. Xu, J. Zhao, L. Cheng, J. Li, X. Wang, F. Wang, L. Liu, I. Amit, S. Zhang, Z. Zhang, Single-cell landscape of bronchoalveolar immune cells in patients with COVID-19. Nat. Med. 26, 842–844 (2020).
+
+E. Mereu, A. Lafzi, C. Moutinho, C. Ziegenhain, D. J. McCarthy, A. Alvarez-Varela, E. Batlle, Sagar, D. Grün, J. K. Lau, S. C. Boutet, C. Sanada, A. Ooi, R. C. Jones, K. Kaihara, C. Brampton, Y. Talaga, Y. Sasagawa, K. Tanaka, T. Hayashi, C. Braeuning, C. Fischer, S. Sauer, T. Trefzer, C. Conrad, X. Adiconis, L. T. Nguyen, A. Regev, J. Z. Levin, S. Parekh, A. Janjic, L. E. Wange, J. W. Bagnoli, W. Enard, M. Gut, R. Sandberg, I. Nikaido, I. Gut, O. Stegle, H. Heyn, Benchmarking single-cell RNA-sequencing protocols for cell atlas projects. Nat. Biotechnol. 38, 747–755 (2020).
+
+Fig. S1. NK cell differentiation in COVID-19 disease
+
+Lymphocytes by SSC-A and FSC-A.
+
+Singlets by FSC-A and FSC-H / SSC-A and SSC-H.
+
+"CD14/CD19/DCM (?) dump."
+
+"CD45neg dump"
+
+"CD3pos dump"
+
+"HLA DR hi dump"
+
+"CD56dim"
+
+"CD56 bright"
+
+
+### Comments
+
 # Neuro
 
 ## Neuronal cell types
