text: Add notes on Tabula Muris

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,5 +1,12 @@
+Cao, J. et al. Comprehensive single-cell transcriptional profiling of a multicellular organism. Science 357, 661–667 (2017).
 
-The human body at cellular resolution: the NIH Human Biomolecular Atlas Program
+Ecker, J. R. et al. The BRAIN Initiative Cell Census Consortium: lessons learned toward generating a comprehensive brain cell atlas. Neuron 96, 542–557 (2017
+Cusanovich, D. A. et al. Multiplex single cell profiling of chromatin accessibility by combinatorial cellular indexing. Science 348, 910–914 (2015).
+14. Cusanovich, D. A. et al. A single-cell atlas of in vivo mammalian chromatin accessibility. Cell 174, 1309–1324 (2018).
+
+24. Chevrier, S. et al. An immune atlas of clear cell renal cell carcinoma. Cell 169, 736–749 (2017)
+
+Schapiro, D. et al. histoCAT: analysis of cell phenotypes and interactions in multiplex image cytometry data. Nat. Methods 14, 873–876 (2017)
 
 Tasic, B. et al. Adult mouse cortical cell taxonomy revealed by single cell transcrip- tomics. Nat. Neurosci. 19, 335–346 (2016)
 Habib, N. et al. Div-Seq: Single-nucleus RNA-Seq reveals dynamics of rare adult newborn neurons. Science 353, 925–928 (2016).
@@ -10,8 +17,6 @@ Korem, Y. et al. Geometry of the gene expression space of individual cells. PLOS
 
 Petilla Interneuron Nomenclature Group, Ascoli, G.A., Alonso-Nanclares, L., Anderson, S.A., Barrionuevo, G., Benavides-Piccione, R., Burkhalter, A., Buz- sa´ ki, G., Cauli, B., Defelipe, J., Faire´ n, A., et al. (2008). Petilla terminology: nomenclature of features of GABAergic interneurons of the cerebral cortex. Nat. Rev. Neurosci. 9, 557–568.
 
-
-Tabula Muris Consortium et al, 2018
 
 Zeng, H. & Sanes,J.R.Neuronalcell-type classification: challenges, oppor- tunities and the path forward. Nat. Rev. Neurosci. 18,530–546 (2017).
 
