--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -432,7 +432,7 @@ By combining single- cell tissue genomics with computational models for circuits
 "This will reopen definitions of a cell’s type and will allow a more sophisticated view of a cell, not only as an instance of a predefined type, but rather as the sum of the biological factors that shaped it."
 --> Amazing!
 
-# Template 
+ 
 
 ## CellO: Comprehensive and hierarchical cell type classification of human cells with the Cell Ontology
 [@doi:10.1101/634097]
@@ -691,6 +691,29 @@ Wethen applied it to a com- plex neural tissue, mouse retina, and from 44,808 ce
 
 
 ### Comments
+
+# Template 
+
+## Single-cell transcriptomics of 20 mouse organs creates a Tabula Muris
+[@doi:10.1038/s41586-018-0590-4]
+### Highlights
+
+Direct and controlled comparison of gene expression in cell types that are shared between tissues, such as T lymphocytes and endothelial cells from different anatomical locations.
+these data are by no means a complete representation of all mouse organs and cell types, they provide a first draft attempt to create an organism-wide representation of cellular diversity
+
+cluster-specific gene expression of known markers and genes that are differentially expressed between clusters to assign cell-type annotations to each cluster (Extended Data Figs. 1, 2, Supplementary Table 1)
+
+Cell type descriptions and defining genes for each organ are available in the Supplementary Information. For each cluster, we provide annota- tions in the controlled vocabulary of the cell ontology19 to facilitate interexperiment comparisons
+
+Cluster co-membership alone, however, is insufficient to conclude that two cell populations from different organs represent the same or similar cell types;
+
+ten thymus cells in cluster 3 (composed of 2,379 cells) are annotated as ‘leukocytes’, but they express Pecam1, which is an endothelial marker. This is a predictable artefact of the annotation scheme: because entire clusters, rather than individual cells, were annotated in each organ, a sufficiently rare cell type that was algorithmically grouped with a more populous cell type will be mis- annotated
+
+We investigated how transcription factors contribute to cell-type identity by clustering averaged gene-expression profiles for each cell type using only the 1,016 transcription factors expressed in our dataset.
+
+
+### Comments
+
 
 # Template 
 
