text: Add notes on single-cell C. elegans paper

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,4 +1,6 @@
-Cao, J. et al. Comprehensive single-cell transcriptional profiling of a multicellular organism. Science 357, 661–667 (2017).
+The structure of the nervous system of the nematode Caenorhabditis elegans
+J G White 1, E Southgate, J N Thomson, S Brenner
+
 
 Ecker, J. R. et al. The BRAIN Initiative Cell Census Consortium: lessons learned toward generating a comprehensive brain cell atlas. Neuron 96, 542–557 (2017
 Cusanovich, D. A. et al. Multiplex single cell profiling of chromatin accessibility by combinatorial cellular indexing. Science 348, 910–914 (2015).
