--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -711,9 +711,45 @@ ten thymus cells in cluster 3 (composed of 2,379 cells) are annotated as ‘leuk
 
 We investigated how transcription factors contribute to cell-type identity by clustering averaged gene-expression profiles for each cell type using only the 1,016 transcription factors expressed in our dataset.
 
-
+136 transcription factors are needed to simultaneously define all cell types across all organs
+--> bold statement
 ### Comments
 
+
+
+## Comprehensive single-cell transcriptional profiling ofa multicellular organism
+[@doi:10.1126/science.aam8940]
+
+### Highlights
+We defined consensus expression profiles for 27 cell types and recovered rare neuronal cell types corresponding to as few as one or two cells in the L2 worm.
+
+Whole-animal chromatin immunoprecipitation sequencing data to deconvolve the cell type–specific effects of transcription factors.
+
+The expression levels of mRNA species are linked to cellular function and therefore can be used to classify cell types (2–10) and order cell states (11).
+
+C. elegans istheonlymulticellular orga- nismfor which all cells and cell types are defined, as is its entire developmental lineage (26, 27)
+
+--> All cell types are defined! I wonder what bases this conclusion. 
+
+We pooled ~150,000 larvae synchronized at the L2 stage and dissociated them into single-cell suspensions.
+
+Semi-supervised clustering analysis segregated the cells into 29 distinct groups.
+
+We identified genes that were expressed specifically in a single cluster, and, by comparing those genes to expression patterns reported in the literature, assigned the clusters to cell types. Twenty-six cell types were represented in the 29 clusters: Nineteen represented exactly one literature-defined cell type, seven contained multiple distinct cell types, two contained cells of a specific cell type but had abnormally low UMI counts, and one could not be readily assigned
+
+de- spite the fact that sci-RNA-seq captures a minor- ity of transcripts in each cell, our “oversampling” of the cellular composition of the organism en- abled us to construct representative expression profiles for individual cell types (Fig.
+
+By morphological criteria, the 302 neurons of the worm are classified into 118 distinct types (36), and fromthe database ofreporter transgene expression patterns, most of these are postulated to have unique molecular signatures (37).
+
+we constructed regularized regression models to predict each gene’s expression as a function of the TF ChIP peaks present in its promoter.
+
+We re- stricted a cell type’s model to those TFs that were detectably expressed within it [>10 tran- scripts per million (TPM)], increasing the pro- portion of TF–cell type associations that are likely to reflect causal gene regulation.
+
+With sci-RNA-seq, we generated a catalog of single-cell transcriptomes with >50-fold “shot- gun” cellular coverage of the L2 C. elegans soma. We detected 18 non-neuronal cell types and many neuronal cell types, which we grouped into either 10 broad classes or 40 fine-grained clus- ters from an unsupervised analysis, highlighting the potential of an organism’s gene regulatory programs to be enacted at a fine-grained level.
+
+To this end, we have created a website to facil- itate the further annotation of these data by the community (http://atlas.gs.washington.edu)
+
+### Comments
 
 # Template 
 
