--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -692,7 +692,6 @@ Wethen applied it to a com- plex neural tissue, mouse retina, and from 44,808 ce
 
 ### Comments
 
-# Template 
 
 ## Single-cell transcriptomics of 20 mouse organs creates a Tabula Muris
 [@doi:10.1038/s41586-018-0590-4]
@@ -749,6 +748,39 @@ With sci-RNA-seq, we generated a catalog of single-cell transcriptomes with >50-
 
 To this end, we have created a website to facil- itate the further annotation of these data by the community (http://atlas.gs.washington.edu)
 
+### Comments
+
+# Template 
+
+## Broad transcriptional dysregulation of brain and choroid plexus cell types with COVID-19
+[@doi:10.1101/2020.10.22.349415]
+### Highlights
+
+We find that all major cortex parenchymal and choroid plexus cell types are affected transcriptionally with COVID-19.
+Missing so far is an unbiased view of the molecular and cellular perturbations across brain cell types in COVID-19 patients.
+
+https://twc-stanford.shinyapps.io/scRNA_Brain_COVID19
+
+To begin, we generated 23,626 single-nuclei gene expression profiles from the medial frontal cortex (4 non-viral, 4 COVID-19, 1 influenza)—and detected a median of 1,486 genes per nucleus
+clustering of nuclear profiles to identify and annotate 8 cell types.
+
+excitatory neurons (e.g., marked by CBLN2 and NRGN), inhibitory neurons (GAD1), astrocytes (AQP4), oligodendrocytes (MBP and ST18), microglia (DOCK8), oligodendrocyte progenitor cells (VCAN), maturing neurons (DACH1), and endothelial cells (LEPR)—though this latter 82 population also contains mixed markers for vascular mural pericytes and smooth muscle cells, 83 as in prior reports.
+
+Overall, the cell type identities, markers, and proportions match prior 84 snRNA-seq data from adult human cortex
+
+2,194 unique differentially expressed genes (DEGs) that implicated all major cell types (Extended Data Table 3).
+
+The vast majority of
+93 DEGs were perturbed in only a single cell type (~84%, Fig. 1e-f, Extended Data Fig. 5a), further indicating a cell type-specific CNS response to COVID-19.
+
+conventional brain snRNA-seq preparation methods nearly universally deplete high-quality brain vascular nuclei from endothelial cells, pericytes, smooth muscle cells, and fibroblasts for currently unknown reasons.
+
+We next sought to identify the neuronal subtypes affected in COVID-19.
+
+Sequencing of 47,678 nuclei in both frontal cortex and choroid plexus along with IHC detection of SARS-CoV-2 in brain-barrier cells.
+
+Extended Data Figure 4. Markers for annotating parenchymal cells in the human choroid plexus.
+Validation of cell type annotations using established cell type-specific markers. Subsets of epithelial cells are marked by high expression of specific markers not previously described in mice. Violin plots are centered around the median, with their shape representing cell distribution
 ### Comments
 
 # Template 
