text: Add notes on BICCN brain cell initiative

--- a/content/06.domain.md
+++ b/content/06.domain.md
@@ -345,14 +345,51 @@ Ultimately, a multimodal approach incorporating continuously variable cell types
 
 ### Comments
 
-# Template 
-
-## Title
-[@doi:]
+## The BRAIN Initiative Cell Census Consortium: Lessons Learned toward Generating a Comprehensive Brain Cell Atlas
+[@doi:10.1016/j.neuron.2017.10.007]
 ### Highlights
+Here we review the experiences of the BRAIN Initiative Cell Census Consortium, ten pilot projects funded by the U.S. BRAIN Initiative
+Since the initial discovery of diverse neuronal cell types over a century ago by Ramon y Ca- jal (1899), we have yet to obtain a full description of the different cell types present in the mammalian brain
+
+high-throughput DNA sequencing, allowed the characterization of broad cell clas- ses by brain region, cortical cell layers, or developmental stages
+
+nalysis and cataloging of gene expression patterns of all genes expressed in the CNS by RNA in situ hybrid- ization (Lein et al., 2007) can definebroad classes of cells, but they can neither prospectively predict nor distinguish closely related cells that are defined by the co-expression of subsets of cell- type-specific genes.
+
+However, since a cell’s transcriptome represents just one aspect of its identity, additional work is needed to inte- grate other structural and functional features—distribution, morphology, connectivity, and physiology—in order to devise a principled framework with which to create a taxonomy of cell types in the brain
+
+on June 5, 2014, the BRAIN Initiative working group delivered ‘‘BRAIN 2025: A Scientific Vision,’’ a comprehensive document outlining a bold plan for the U.S. BRAIN Initiative (https://www.braininitiative. nih.gov/pdf/BRAIN2025_508C.pdf). ‘‘BRAIN
+
+7 major goals to be accomplished over a 10-year period, of which the first two were (1) to identify and provide experimental access to different brain cell types to determine their roles in health and disease
+
+in late 2013 the NIH
+released a Funding Opportunity Announcement (FOA) entitled ‘‘BRAIN Initiative: Transformative Approaches for Cell-Type Classification in the Brain (U01)’’ (https://grants.nih.gov/grants/ guide/rfa-files/RFA-MH-14-215.html)
+
+these investigations validate the efficacy of single-cell approaches for cataloging cell types, discovering novel subtypes, as well as identifying cell-type-specific marker genes.
+
+A comprehensive adult cell atlas will involve multiple brain re- gions across multiple individuals and will need to consider age, potentially including adolescent, mid-life, and elderly, as an important variable.
+
+A study of hematopoietic differentiation using single-cell ATAC-seq re- vealed that chromatin accessibility at enhancers was more effective at classifying cell types than gene expression profiles (Corces et al., 2016)
+--> What does it mean to be more effective?
 
 
+Sparse labeling of brain cytoarchitecture by the Golgi method transformed neuroanatomy at the turn of the last century (Golgi, 1873; Ramo´ n y Cajal, 1904), enabling detailed visualization of single-cell morphologies across the entire brain. Today, similar sparse visualization of specific cell types in the mouse brain is possible by viral vector-based labeling.
 
+We anticipate that an atlas of cell types in the developing human brain will provide a frame of reference to understand cell vulner- abilities at the earliest stages of diseas.
+
+Comparisons both within and across these groups allow us to identify both universal principles common to multiple cell types (as well as functional units and/or neural circuits) and spe- cific cell types implicated in the etiology of neurologic or psychi- atric diseases.
+
+Toward the ultimate goal of understanding cell types in the human brain, we suggest that cross-species comparison of cell types be conducted across at least three mammalian species: mouse, a non-human primate species, and human. The mouse is the genetically most tractable mammalian experimental model and can serve as the evolutionally more distant outgroup. We recommend the non-human primate be macaque, the most commonly studied non-human primate in neuroscience, and/or marmoset, an emerging non-human primate genetic model sys- tem (Izpisua Belmonte et al., 2015; Miller et al., 2016). A complete inventory of cell types should include information about the defining features, proportions, and spatial distributions of all cell types, and this information must be provided in the context of a framework, including nomenclature, common across species
+
+--> Explicitly suggests we look for archetypes
+
+though we have gained a fairly good understanding of the cell fate specification of major cortical cell classes and a number of transcription factors that regulate these processes (Bandler et al., 2017; Leone et al., 2008; Lodato and Arlotta, 2015; Molyneaux et al., 2007; Nord et al., 2015; Shi- bata et al., 2015), how cells in these major classes complete their terminal mitoses, migrate, and differentiate into the final, adult- stage cell types; to what extent cellular diversity contributes to the complex functions of the brain (Klausberger and Somogyi, 2008); and how those functions in turn rely on the evolutionary and developmental differences underlying cellular diversity are not well understood. To
+
+
+The importance of establishing a common cell type nomenclature across species cannot be overstated. 
+
+All cell types within each region will likely be arranged in a hierarchical manner as well to reflect their relative closeness to each other. Across species, such hier- archical organization of cell types might be similar overall, but species-specific major or minor branches of cell types will also be recognized. 
+
+he goals of the BICCN are to deliver the following: a deep characterization of the diversity of cell types and the logic of their three-dimensional organization in the brain; an open-access three-dimensional digital reference atlas with molecular, anatomical, and physiological annotations of brain cell types in the mouse
 ### Comments
 
 
