text: Add notes on scATAC-seq mouse atlas

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,7 +1,6 @@
+An estimation of the number of cells in the human body
 
-Ecker, J. R. et al. The BRAIN Initiative Cell Census Consortium: lessons learned toward generating a comprehensive brain cell atlas. Neuron 96, 542–557 (2017
-Cusanovich, D. A. et al. Multiplex single cell profiling of chromatin accessibility by combinatorial cellular indexing. Science 348, 910–914 (2015).
-14. Cusanovich, D. A. et al. A single-cell atlas of in vivo mammalian chromatin accessibility. Cell 174, 1309–1324 (2018).
+The dynamics and regulators of cell fate decisions are revealed by pseudotemporal ordering of single cells
 
 24. Chevrier, S. et al. An immune atlas of clear cell renal cell carcinoma. Cell 169, 736–749 (2017)
 
