text: Add notes on neuron types:

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,10 +1,27 @@
+Ramón y Cajal, S. Histologie Du Système Nerveux de L’homme & Des Vertébrés (ed. Maloine, A.) (Paris: Maloine, 1909). Translated by Swanson, N. & Swanson, L. W. (Oxford University Press, 1995).
+Rodieck, R. W. & Brening, R. K. Retinal ganglion cells: properties, types, genera, pathways and trans-species comparisons. Brain Behav. Evol. 23, 121–164 (1983).
+29. Rowe, M. H. & Stone, J. Naming of neurones. Classification and naming of cat retinal ganglion cells. Brain Behav. Evol. 14, 185–216 (1977)
+Huang, Z. J. & Zeng, H. Genetic approaches to neural circuits in the mouse. Annu. Rev. Neurosci. 36, 183–215 (2013). This article summarizes the progress enabled by obtaining genetic access to specific cell types, which relied on molecular classification.
+
+Sanes, J. R. & Masland, R. H. The types of retinal ganglion cells: current status and implications for neuronal classification. Annu. Rev. Neurosci. 38, 221–246 (2015). This article reviews the progress in classifying RGC types in mice. Remarkably, the estimated number has grown from ~30 to >50 in the two years since its publication
+
+Siegert, S. et al. Genetic address book for retinal cell types. Nat. Neurosci. 12, 1197–1204 (2009).
+
+Tyner, C. F. The naming of neurons: applications of taxonomic theory to the study of cellular populations. Brain Behav. Evol. 12, 75–96 (1975). A prescient discussion of how taxonomic principles could be used to improve cell-type classification. Cast in terms of physiological properties (see also REFS 24, 28 and 29), it is even more applicable to modern molecular schemes.
+
+Crick, F. The impact of molecular biology on neuroscience. Phil. Trans. R. Soc. Lond. B 354, 2021–2025 (1999).
 The dynamics and regulators of cell fate decisions are revealed by pseudotemporal ordering of single cells
+
+A maximum-likelihood approach for building cell-type trees by lifting
+Forcing cells to change lineages
+
+http://celltypes.brain-map.org/
 
 24. Chevrier, S. et al. An immune atlas of clear cell renal cell carcinoma. Cell 169, 736–749 (2017)
 
 Schapiro, D. et al. histoCAT: analysis of cell phenotypes and interactions in multiplex image cytometry data. Nat. Methods 14, 873–876 (2017)
 
-Tasic, B. et al. Adult mouse cortical cell taxonomy revealed by single cell transcrip- tomics. Nat. Neurosci. 19, 335–346 (2016)
+Tasic, B. et al. Adult mouse cortical cell taxonomy revealed by single cell transcriptomics. Nat. Neurosci. 19, 335–346 (2016)
 Habib, N. et al. Div-Seq: Single-nucleus RNA-Seq reveals dynamics of rare adult newborn neurons. Science 353, 925–928 (2016).
 Shekhar, K. et al. Comprehensive classification of retinal bipolar neurons by single-cell transcriptomics. Cell 166, 1308–1323 (2016).
 Korem, Y. et al. Geometry of the gene expression space of individual cells. PLOS Comput. Biol. 11, e1004224 (2015).
@@ -14,15 +31,12 @@ Korem, Y. et al. Geometry of the gene expression space of individual cells. PLOS
 Petilla Interneuron Nomenclature Group, Ascoli, G.A., Alonso-Nanclares, L., Anderson, S.A., Barrionuevo, G., Benavides-Piccione, R., Burkhalter, A., Buz- sa´ ki, G., Cauli, B., Defelipe, J., Faire´ n, A., et al. (2008). Petilla terminology: nomenclature of features of GABAergic interneurons of the cerebral cortex. Nat. Rev. Neurosci. 9, 557–568.
 
 
-Zeng, H. & Sanes,J.R.Neuronalcell-type classification: challenges, oppor- tunities and the path forward. Nat. Rev. Neurosci. 18,530–546 (2017).
+Zeng, H. & Sanes,J.R. Nat. Rev. Neurosci. 18,530–546 (2017).
 
 Kurtz A, Seltmann S, Bairoch A, Bittner MS, Bruce K, Capes-Davis A, Clarke L, Crook JM, Daheron L, Dewender J, Faulconbridge A, Fujibuchi W, Gutteridge A, Hei DJ, Kim YO, Kim JH, Kokocinski AK, Lekschas F, Lomax GP, Loring JF, Ludwig T, Mah N, Matsui T, Müller R, Parkinson H, Sheldon M, Smith K, Stachelscheid H, Stacey G, Streeter I, Veiga A, Xu RH.
 A Standard Nomenclature for Referencing and Authentication of Pluripotent Stem Cells.
 
-Sakurai K, Fujibuchi W.
-Developing Global Cellular Information Retrieval System with Minimum Reporting Guidelines on Cellular Data for Regenerative Medicine.
-
-Fujibuchi,W., Kiseleva,L., Taniguchi,T. et al. (2005) Development of cell knowledge base and prediction of cell types and characteristics by gene expression profiles. IPSJ SIG Technical Reports 2005-BIO-2, 33–37 (in Japanese).
+SFujibuchi,W., Kiseleva,L., Taniguchi,T. et al. (2005) Development of cell knowledge base and prediction of cell types and characteristics by gene expression profiles. IPSJ SIG Technical Reports 2005-BIO-2, 33–37 (in Japanese).
 14.
 
 A community-based transcriptomics classification and nomenclature of neocortical cell types
