text: Add notes on non-descriptive naming

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,5 +1,16 @@
-Ramón y Cajal, S. Histologie Du Système Nerveux de L’homme & Des Vertébrés (ed. Maloine, A.) (Paris: Maloine, 1909). Translated by Swanson, N. & Swanson, L. W. (Oxford University Press, 1995).
+Tyner, C. F. The naming of neurons: applications of taxonomic theory to the study of cellular populations. Brain Behav. Evol. 12, 75–96 (1975). A prescient discussion of how taxonomic principles could be used to improve cell-type classification. Cast in terms of physiological properties (see also REFS 24, 28 and 29), it is even more applicable to modern molecular schemes.
+
+A rose by any other name... on 'naming of neurones' by Rowe and Stone
+
+Scala Naturae. Why there is no theory in com? parative psychology
+
+Huxley, J. S.: The new systematics (Oxford Univ. Press, Oxford 1940).
+
+Popper, K. R.: The open society and its enemies; 4th ed., vol. 1 (Routledge & Kegan Paul, London 1962)
+
 Rodieck, R. W. & Brening, R. K. Retinal ganglion cells: properties, types, genera, pathways and trans-species comparisons. Brain Behav. Evol. 23, 121–164 (1983).
+A genetic and computational approach to structurally classify neuronal types
+
 29. Rowe, M. H. & Stone, J. Naming of neurones. Classification and naming of cat retinal ganglion cells. Brain Behav. Evol. 14, 185–216 (1977)
 Huang, Z. J. & Zeng, H. Genetic approaches to neural circuits in the mouse. Annu. Rev. Neurosci. 36, 183–215 (2013). This article summarizes the progress enabled by obtaining genetic access to specific cell types, which relied on molecular classification.
 
@@ -7,7 +18,7 @@ Sanes, J. R. & Masland, R. H. The types of retinal ganglion cells: current statu
 
 Siegert, S. et al. Genetic address book for retinal cell types. Nat. Neurosci. 12, 1197–1204 (2009).
 
-Tyner, C. F. The naming of neurons: applications of taxonomic theory to the study of cellular populations. Brain Behav. Evol. 12, 75–96 (1975). A prescient discussion of how taxonomic principles could be used to improve cell-type classification. Cast in terms of physiological properties (see also REFS 24, 28 and 29), it is even more applicable to modern molecular schemes.
+Bock, W. J.: Philosophical foundations of classical evolutionary classification. Syst. Zool. 22: 375-392 (1973).
 
 Crick, F. The impact of molecular biology on neuroscience. Phil. Trans. R. Soc. Lond. B 354, 2021–2025 (1999).
 The dynamics and regulators of cell fate decisions are revealed by pseudotemporal ordering of single cells
